--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,7 +1,6 @@
 body {
   margin: 0px; }
   body #main-content {
-    height: 90%;
-    background-color: white; }
+    height: 90%; }
     body #main-content h1 {
       margin: 0; }
