--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,4 +1,4 @@
-<header>
+<header class="height-test">
     <div id="head-container">
         <p id="company-name">Codeial</p>
         <div id="sign-information">
