--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,6 +1,5 @@
 h1 {
-  color: white;
-  background-color: aqua; }
+  color: white; }
 
 .color-blue {
   color: blue; }
@@ -38,5 +37,77 @@ a {
       text-align: left; }
 
 #search-box {
-  width: 250px;
-  border: 1px solid; }
+  margin: 10px 10px; }
+  #search-box input {
+    padding: 10px;
+    width: 300px; }
+  #search-box ul {
+    list-style: none;
+    padding: 10px; }
+    #search-box ul li {
+      margin: 5px; }
+    #search-box ul a {
+      text-decoration: none; }
+
+#post-friend-container {
+  display: flex;
+  height: 100%; }
+  #post-friend-container #redundant {
+    width: 25%;
+    border-right: 1px solid gray; }
+  #post-friend-container #all-posts {
+    width: 50%;
+    overflow: scroll; }
+    #post-friend-container #all-posts #posts-form-container {
+      border-bottom: 2px double #929191; }
+      #post-friend-container #all-posts #posts-form-container textarea {
+        display: block;
+        padding: 5px;
+        font-size: 1.3rem; }
+      #post-friend-container #all-posts #posts-form-container input {
+        margin: 10px;
+        padding: 5px; }
+    #post-friend-container #all-posts #posts-container #posts {
+      list-style: none;
+      padding: 0px;
+      width: 100%; }
+      #post-friend-container #all-posts #posts-container #posts li:not(:last-child) {
+        border-bottom: 2px solid gray; }
+      #post-friend-container #all-posts #posts-container #posts li {
+        padding: 20px 40px; }
+        #post-friend-container #all-posts #posts-container #posts li p {
+          width: 95%;
+          display: inline-block; }
+        #post-friend-container #all-posts #posts-container #posts li .bradley-underline {
+          font-family: Bradley Hand, cursive;
+          text-decoration: underline; }
+        #post-friend-container #all-posts #posts-container #posts li .fontsize1point0 {
+          font-size: 0.8rem; }
+        #post-friend-container #all-posts #posts-container #posts li .fontsize-1point2 {
+          font-size: 1.2rem; }
+        #post-friend-container #all-posts #posts-container #posts li form {
+          margin: 20px; }
+          #post-friend-container #all-posts #posts-container #posts li form textarea {
+            padding: 4px 6px; }
+        #post-friend-container #all-posts #posts-container #posts li .show-comments-container ul {
+          list-style: none;
+          padding: 10px; }
+          #post-friend-container #all-posts #posts-container #posts li .show-comments-container ul li {
+            padding: 0px 20px; }
+          #post-friend-container #all-posts #posts-container #posts li .show-comments-container ul li:not(:last-child) {
+            border-bottom: 1px solid gray; }
+  #post-friend-container #friends-list {
+    position: absolute;
+    height: 90%;
+    right: 150px;
+    padding-left: 20px;
+    border-left: 1px solid;
+    overflow: auto; }
+    #post-friend-container #friends-list ul {
+      list-style: none;
+      padding-left: 10px; }
+      #post-friend-container #friends-list ul li {
+        margin: 15px 10px; }
+      #post-friend-container #friends-list ul a {
+        text-decoration: none;
+        font-size: 1.2rem; }
