--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -1,6 +1,11 @@
+.height-test {
+    height:70px;
+}
 #head-container{
 
     display:flex;
+    position: fixed;
+    width: 100%;
     background-color: blue;
     height:70px;
     justify-content: space-between;
