--- a/views/_searchbox.ejs
+++ b/views/_searchbox.ejs
@@ -1,3 +1,3 @@
 <div id="search-box">
-        <input type="text" placeholder="Search Here.." name="search_input">
+        <input type="text" placeholder="Search for user.." name="search_input">
 </div>
