--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,6 @@
+<link rel="stylesheet" type="text/css" href="<%=assetPath('css/chatbox.css')%>">
 <link rel="stylesheet" type="text/css" href="<%=assetPath('css/home.css')%>">
 <script src="<%=assetPath('js/home.js')%>"></script>
-
 
 <% if(locals.user) { %>
 <div id="post-friend-container">
@@ -54,6 +54,10 @@
 <!-- <div id="h">
     dfsdf
 </div> -->
+
+<div id="chatbox-flex">
+    
+</div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
 <% if(locals.user) { %> 
